# Idle-NPU-Waker

./: .gitignore  README.md  README_en.md  README_zh.md  build.py  lang.json  main.py  requirements.txt  tmp_line.md
app/: config.py  model_configs.py  model_settings.json
app/core/: download_script.py  downloader.py  i18n.py  llm_process.py  llm_worker.py  runtime.py  session.py
app/lang/: en_US.json  zh_CN.json
app/ui/: chat_widgets.py  chat_window.py  message_bubble.py  resources.py  settings_panel.py  sidebar.py  widgets.py
app/ui/components/: download_panel.py  runtime_panel.py  session_list.py
app/utils/: config_loader.py  model_type.py  scanner.py  styles.py
backend/: app.py  download_service.py  llm_service.py  npu_monitor.py  server.py  system_status.py
frontend/: app.js  index.html  styles.css  tray.css  tray.html  tray.js
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/permissions/: app.toml
src-tauri/src/: main.rs
