[package]
name = "idle-npu-waker"
version = "0.1.0"
description = "Idle NPU Waker"
authors = ["Idle NPU Waker"]
license = "GPL-3.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = { version = "2", features = [] }
