[package]
name = "idle-npu-waker"
version = "1.1.0"
description = "Idle NPU Waker"
authors = ["Idle NPU Waker"]
license = "GPL-3.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.22"
dirs = "5"
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = { version = "2", features = [] }
